--- a/swagger/schemas/definitions/project.json
+++ b/swagger/schemas/definitions/project.json
@@ -46,7 +46,7 @@
                     }
                 },
                 "notes": {"$ref":"note.json#/definitions/notes-list-output"},
-                "tags":  {"$ref":"tag.json#/definitions/tag-output-list"},
+                "tags":  {"$ref":"tag.json#/definitions/tag-list"},
                 "analyses":{
                     "type":"array",
                     "items":{"$ref":"analysis.json#/definitions/analysis-output"}
