Add API documentation for search endpoint

--- a/swagger/index.yaml
+++ b/swagger/index.yaml
@@ -68,6 +68,7 @@ paths:
     - paths/batch.yaml
     - paths/analyses.yaml
     - paths/site-rules.yaml
+    - paths/dataexplorer.yaml
 
 
 securityDefinitions:
