Add model merge for swagger codegen
This commit will allow merging input and output models based on
the `x-sdk-model` property in the JSON definitions.

--- a/swagger/schemas/definitions/project.json
+++ b/swagger/schemas/definitions/project.json
@@ -10,7 +10,8 @@
                 "description":  {"$ref":"common.json#/definitions/description"},
                 "group":        {"$ref":"common.json#/definitions/string-id"}
             },
-            "additionalProperties": false
+            "additionalProperties": false,
+            "x-sdk-model": "project"
         },
         "project-metadata-input": {
             "type": "object",
@@ -52,7 +53,8 @@
                     "items":{"$ref":"analysis.json#/definitions/analysis-output"}
                 }
             },
-            "additionalProperties": false
+            "additionalProperties": false,
+            "x-sdk-model": "project"
         }
     }
 }
