Refactor Dockerfile, test scripts and CI

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,11 @@
-.git
+*
 
-# --- Below Should mirror .gitignore, without leading '/' --- #
-.DS_Store
-.*sw[op]
-*.py[co]
-*.egg-info
-persistent
-runtime
-bootstrap.json
-.cache
-.coverage*
-coverage.xml
-htmlcov
-node_modules
+!api
+!bin
+!docker/uwsgi-config.ini
+!docker/uwsgi-entrypoint.sh
+!requirements.txt
+!setup.py
+!swagger/examples
+!swagger/schemas
+!tests/requirements.txt
