--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-.DS_Store
-.*sw[op]
-*.py[co]
 *.egg-info
+*.py[co]
+.*sw[op]
+.cache
+.DS_Store
+/.coverage*
+/bin/accesslog.csv
+/htmlcov
 /persistent
 /runtime
 bootstrap.json
-.cache
-/.coverage*
 coverage.xml
 endpoints.json
-/htmlcov
-node_modules/
-/bin/accesslog.csv
+node_modules
