--- a/docker/uwsgi-config.ini
+++ b/docker/uwsgi-config.ini
@@ -1,8 +1,6 @@
 [uwsgi]
-wsgi-file = bin/api.wsgi
-chdir=code/api
-pythonpath=code/data
-master = True
-die-on-term = True
+die-on-term = true
+master = true
+module = api.wsgi
 processes = 4
 threads = 2
