--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@ backports.tempfile==1.0
 django>=1.11.0,<1.12.0
 elasticsearch==5.3.0
 enum==0.4.6
+ipython==4.0.2
 jsonschema==2.6.0
 Markdown==2.6.5
 pymongo==3.2
-pyOpenSSL >=17.1.0,<18.0
 python-dateutil==2.4.2
 pytz==2015.7
-requests==2.9.1
+requests[security]==2.18.4
 rfc3987==1.3.4
 strict-rfc3339==0.7
 unicodecsv==0.9.0
