Add documentation for resolver endpoint
Closes #1088

--- a/swagger/index.yaml
+++ b/swagger/index.yaml
@@ -69,6 +69,7 @@ paths:
     - paths/analyses.yaml
     - paths/site-rules.yaml
     - paths/dataexplorer.yaml
+    - paths/resolver.yaml
 
 
 securityDefinitions:
